- fixed horizontal scroll on firefox for Tango theme.
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@10700 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/tango/tango.css
+++ b/templates/tango/tango.css
@@ -828,10 +828,10 @@ div.il_Tab
 	margin-bottom: 10px;
 	margin-left: 0px;
 	margin-right: 0px;
-    float:left;
-    width:100%;
-	padding-left:10px;
-    line-height:normal;
+	float:left;
+    	width:100%;
+	padding-left:0px;
+    	line-height:normal;
 	background:#fffffe url(images/TabBack.gif) repeat-x bottom;
 }
 
